# sixdegrees

./: .gitignore  Makefile  README.md  pyproject.toml
sixdegrees/cli/: sixdegrees.py
sixdegrees/core/: database.py  database_object.py  explorer.py  fzf.py  log.py  tmdb.py
sixdegrees/data/database/: database_init.sql
test/: test_connect.py  test_object_id.py  test_object_kind.py
