[tool.poetry]
name = "sixdegrees"
version = "0.0.1"
description = "Explore connections between actors"
authors = ["Andrea Sorbini <as@mentalsmash.org>"]
readme = "README.md"
license = "Apache-2.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux"
]
packages = [
  { include = "sixdegrees" }
]

[tool.poetry.dependencies]
pytest = "^8.1"
python = "^3.9"
termcolor = "^2.4.0"
tmdbsimple = "^2.9.1"
thefuzz = "^0.22.1"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
docutils = "^0.18.1"
m2r = "^0.3.1"
mistune = "^0.8.4"
sphinx-autodoc-typehints = "^1.25.2"
sphinx-rtd-theme = "^1.3.0"
sphinxcontrib-programoutput = "^0.17"
sphinxemoji = "^0.2.0"
sphinx-tabs = "^3.4.4"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.7"
pre-commit = "^3.7.0"

[tool.pytest.ini_options]
addopts = [
  "--import-mode=importlib",
]

[tool.poetry.scripts]
6d = 'sixdegrees.cli.sixdegrees:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
indent-width = 2
target-version = "py39"

# [tool.ruff.lint]
# ignore = ["E741"]
